--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ header {
 
     .conteiner-right {
         display: block;
-        height: auto;
+        height: 105vh;
         width: 100%;
         position: static;
     }
